# nvim-treesitter-textobjects

./: .luacheckrc  .luarc.json  .pre-commit-config.yaml  .tsqueryrc.json  BUILTIN_TEXTOBJECTS.md  CONTRIBUTING.md  Makefile  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check_query_files.yml  consistency_tests.yml  lint.yml  release-parsers.yml  test.yml  tests.yml  update-readme.yml
autoload/: nvim_treesitter_textobjects.vim
doc/: nvim-treesitter-textobjects.txt
lua/: module-template.lua  nvim-treesitter-textobjects.lua
plugin/: module-template.vim  nvim-treesitter-textobjects.vim  query_predicates.lua
scripts/: check-queries.lua  ci-install-ubuntu-latest.sh  ci-install.sh  install_parsers.lua  minimal_init.lua  run_tests.sh  update-builtin-textobjects.lua  update-readme.lua
scripts/python_tests/: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
scripts/python_tests/lua/: autocmd_cursormoved.lua  autocmd_cursormoved_i.lua  autocmd_vimleave.lua  autocmd_visualenter.lua  autocmd_visualleave.lua  event_on_byte.lua  helpers.lua  treesitter_init.lua
scripts/python_tests/src/nvim_communicator/: __init__.py  cursor.py  pynvim_helpers.py  rpc_messages.py  selection.py  textobjects.py
scripts/python_tests/tests/: conftest.py  test_select.py
scripts/python_tests/tools/: auto_generate_tests.py  auto_generate_tests_demo.py  download_and_run_tests.sh  event_demo.py  event_playground.py  kill_hanging_nvim.sh  run_test_yaml.py  test_demo.py
(+113 files in other folders)
