[metadata]
name = nvim_communicator
description = A Python package for communicating with Neovim
author = Kiyoon Kim
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    nvim_communicator
install_requires =
    requests>=2
	pynvim >= 0.4.3
	coloredlogs >= 15.0.0
	verboselogs >= 1.7
	tqdm >= 4.62.3
	pyyaml >= 6.0
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
nvim_communicator = py.typed

[flake8]
max-line-length = 160
